[project]
name = "cbzutils"
version = "0.1.1"
description = "A set of utilities both library and cli to deal with CBZ files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "tqdm>=4.67.1",
]
license = "LGPL-3.0-only"
license-files = ["LICENSE*", "AUTHORS.md", "licenses/**/*"]

[project.scripts]
cbzutils = "cbzutils.__main__:run_app"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pytest>=9.0.1",
]

[tool.uv]
package = true
